# knowledge-catalog-jvto-bootstrap

./: .gitignore  CLAUDE.md  FILES.txt  MERGE-INTO-KNOWLEDGE-CATALOG.md  README.md
.claude/: settings.json
.github/: pull_request_template.md
.gstack/: browse-audit.jsonl
mcp-server/: README.md  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
okf-api/: README.md  ecosystem.config.cjs  package-lock.json  (+1 more)
okf/jvto/: CLAUDE.md  Makefile  README.md  pyproject.toml
okf/jvto/config/: concept-map.yaml  publication-rules.yaml  source-scope.yaml  upstreams.yaml
okf/jvto/curation/approved/: README.md  destinations.yaml  organization.yaml  packages.yaml  partners.yaml  people.yaml  policies.yaml  references.yaml  reviews.yaml  travel-guides.yaml  trust.yaml
okf/jvto/curation/templates/: concepts.example.yaml
okf/jvto/docs/: 00-goal-and-boundaries.md  01-source-to-output-map.md  02-architecture.md  03-operating-procedure.md  04-data-safety-and-release.md  05-concept-model.md  06-integration-plan.md  07-source-contract-summary.md  08-okf-pipeline-blueprint.md  09-okf-spec-conformance.md  10-wiki-core-extraction-plan.md
okf/jvto/scripts/: build_bundle.py  build_customer_sales_release.py  bundle_graph.py  common.py  fetch_snapshots.py  okf_core.py  validate_customer_sales_release.py  validate_okf.py  visualize.py
okf/jvto/scripts/viz_assets/: viz.html  viz.js
okf/jvto/skills/jvto-okf-verified-curation/: SKILL.md
okf/jvto/sources/snapshots/: README.md
okf/jvto/tests/: test_build_customer_sales_release.py  test_okf_core.py  test_okf_tools.py
(+147 files in other folders)
